# django-pg-eventstream

./: .gitignore  README.md  pyproject.toml
django_pg_eventstream/: __init__.py  apps.py  decorators.py  models.py  operations.py
tests/: conftest.py  test_creation.py
tests/sample/product/: models.py
tests/sample/product/migrations/: 0001_initial.py
tests/sample/sample/: settings.py
