[project]
name = "django-pg-eventstream"
version = "0.1.0"
description = "Track changes in your django models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-postgresql>=6.1.1",
    "pytest-django>=4.9.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.sample.sample.settings"
python_files = ["test_*.py"]
django_find_project = false
pythonpath = ["tests/sample"]